refactor : 코드 간단하게 변경